--- a/index.html
+++ b/index.html
@@ -101,11 +101,11 @@
         
         <!-- Animated Header for All Slides (except first) -->
         <header id="slide-header" class="absolute top-0 left-0 w-full p-6 lg:p-8 flex justify-center items-center z-20 pointer-events-none space-x-5">
-            <img src="https://raw.githubusercontent.com/karanxrathod0000/jit_ambassadors/main/jit%20new%20logo%20hd.png" alt="JIT Logo" class="h-16 md:h-20 logo-img" onerror="this.style.display='none'">
+            <img src="https://raw.githubusercontent.com/karanxrathod0000/jit_ambassadors/main/jit%20new%20logo%20hd.png" alt="JIT Logo" class="h-20 md:h-24 logo-img" onerror="this.style.display='none'">
             <span class="text-gray-300 text-4xl font-thin">|</span>
-            <img src="https://raw.githubusercontent.com/karanxrathod0000/jit_ambassadors/main/Google%20Student%20Ambassador_Logo_CMYK.jpg?raw=true" alt="GSA Logo" class="h-12 md:h-14 logo-img" onerror="this.style.display='none'">
+            <img src="https://raw.githubusercontent.com/karanxrathod0000/jit_ambassadors/main/Google%20Student%20Ambassador_Logo_CMYK.jpg?raw=true" alt="GSA Logo" class="h-14 md:h-16 logo-img" onerror="this.style.display='none'">
             <span class="text-gray-300 text-4xl font-thin">|</span>
-            <img src="https://raw.githubusercontent.com/karanxrathod0000/jit_ambassadors/main/Gemini_PrimaryLogo_FullColor.png" alt="Gemini Logo" class="h-10 md:h-12 logo-img" onerror="this.style.display='none'">
+            <img src="https://raw.githubusercontent.com/karanxrathod0000/jit_ambassadors/main/Gemini_PrimaryLogo_FullColor.png" alt="Gemini Logo" class="h-12 md:h-14 logo-img" onerror="this.style.display='none'">
         </header>
 
         <!-- Slide 1: Title -->
@@ -594,4 +594,17 @@
 </html>
 
 
+
+" in the most up-to-date Canvas "Gemini Pro for Students Presentation" document above and am asking a query about/based on this code below.
+Instructions to follow:
+  * Don't output/edit the document if the query is Direct/Simple. For example, if the query asks for a simple explanation, output a direct answer.
+  * Make sure to **edit** the document if the query shows the intent of editing the document, in which case output the entire edited document, **not just that section or the edits**.
+    * Don't output the same document/empty document and say that you have edited it.
+    * Don't change unrelated code in the document.
+  * Don't output  and  in your final response.
+  * Any references like "this" or "selected code" refers to the code between  and  tags.
+  * Just acknowledge my request in the introduction.
+  * Make sure to refer to the document as "Canvas" in your response.
+
+now I have add the one more slides in my ppt , in my code , now can you please add this new slides , in my ppt and this slides have thank you message for the audience , and in this slides add the logos of the college and GSA and with biger fonts of thank you with google colours and make this slides more atractive and good looking , this slides is coming at the end of the ppt . and the total slides are now 29 .
 
